--- a/index.css
+++ b/index.css
@@ -3,10 +3,14 @@
 }
 
 .picto {
-	border: 2px solid rgb(49, 30, 189);
 	padding: 0px;
 	display: inline-block;
 	cursor: pointer;
+	border: 2px solid rgb(49, 30, 189);
+}
+
+.img-on {
+	border: 2px solid rgb(49, 30, 189);
 }
 
 .img-muted {
